--- a/content/plugins/editions/creative.slim
+++ b/content/plugins/editions/creative.slim
@@ -24,8 +24,8 @@ ul.arrow_list
   li Get a 2-4x speed boost with the WicBuilder pipeline, for a slight quality penalty.
 
 markdown: 
-  When purchased as the Creative Edition (under the [Domain license](/licenses/domain)), you are allowed to use the plugins on a registered domain and any subdomains. If you choose to use the floating registration method, you can change domains at any time.
+  When purchased as the Creative Edition (under the [Domain license](/licenses/domain)), you are allowed to use the plugins on one registered domain and any subdomains.
   If purchased with the Elite Edition or Support Contracts, you do not need to register your domains.
-  Only the Watermark and SimpleFilters plugins are medium-trust compatible.
+  Only the Watermark and SimpleFilters plugins are medium-trust compatible, and only in ImageResizer v3 and below.
 
 == partial :my_plugins, options
