--- a/content/plugins/editions/elite.slim
+++ b/content/plugins/editions/elite.slim
@@ -6,4 +6,7 @@ Includes Editions: free, performance, creative
 
 h1 Elite Edition
 
+markdown:
+  The Elite edition is available under an [enterprise-wide](/licenses/enterprise), [SaaS](/licenses/saas), or [OEM](/licenses/oem) license.
+
 == partial :my_plugins, options
