--- a/content/plugins/editions/free.slim
+++ b/content/plugins/editions/free.slim
@@ -8,13 +8,12 @@ h1 Essential edition
 
 markdown:
 
-  Except for PdfRenderer, which is [under a different license](/licenses/pdfrenderer) due to its use of GPL components, all of the plugins in this edition are released under the [Freedom license](/licenses/freedom).
+
+  Except for PdfRenderer, which is [under a different license](/licenses/pdfrenderer) due to its use of (A)GPL components, all of the plugins in this edition are released under the [Freedom license](/licenses/freedom) (for v3) or the [Apache license](/licenes/apache) for v4.
 
   Everything here can be found in the [free download](/download).
 
   Logging, MvcRoutingShim, and PdfRenderer are seperate DLLs (due to extra dependencies), but all the rest are found in `ImageResizer.dll` in the `ImageResizer.Plugins.Basic` namespace.
-
-  Check out the [maturity chart](/plugins/maturity) to see which plugins are the most stable.
 
 
 == partial :my_plugins, options
