--- a/content/support/contracts/support_page.slim
+++ b/content/support/contracts/support_page.slim
@@ -16,6 +16,8 @@ ul.nav.nav-pills
       a href="/support/contracts/silver" Silver
     li
       a href="/support/contracts/gold" Gold
+    li
+      a href="/support/contracts/oem" OEM/SaaS
 
 
 
