--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -33,8 +33,8 @@ html(lang="en" class="no-js")
     /[if IE 7]
       link href="/css/less/font-awesome-ie7.css"
 
-    - if page.lib? :pricer
-      link rel="stylesheet" href="/css/less/pricer.css"
+    - if page.lib? :license
+      link rel="stylesheet" href="/css/less/license.css"
 
     - if page.lib? :swipebox
       link rel="stylesheet" href="/css/less/swipebox.css"
