--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -14,13 +14,10 @@ h1 Support Contracts
       h4 Get a direct line to our developers, latest features, and scalability guidance.
 
 .row-fluid
-  .span4
+  .span3
     .well
       p: a href="contracts/bronze"
         img alt="ImageResizer Bronze" src="/img/contracts/contract-hero-bronze.png"
-      p align="right"
-        a.btn.btn-primary href="contracts/bronze"
-          | Details &raquo;
       markdown: 
         In thirty minutes, we will help you design the ideal architecture to ensure you meet your performance, quality, scalability, and cost goals. 
 
@@ -29,35 +26,49 @@ h1 Support Contracts
         1 designated individual gets 1 free priority support incident per month. 
 
         Only $100 more than an Elite license alone.
+      p align="right"
+        a.btn.btn-primary href="contracts/bronze"
+          | Details &raquo;
 
-  .span4
+  .span3
     .well
       p: a href="contracts/silver"
         img alt="ImageResizer Silver" src="/img/contracts/contract-hero-silver.png"
-      p align="right"
-        a.btn.btn-primary href="contracts/silver"
-          | Details &raquo;
       markdown:
         Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes **unlimited support incidents to your entire organization**, with a 2 business-hour response time. Got a 3am disaster? 1 free emergency support incident is included per year.
         
         Millions of daily visitors. Terabytes of images. Complex workflows. Leverage our expertise and ensure your architecture will **stay** secure and performant in the real world. Hours of consulting and custom development are included.
+      p align="right"
+        a.btn.btn-primary href="contracts/silver"
+          | Details &raquo;
       
-  .span4
+  .span3
     .well
       p: a href="contracts/gold"
         img alt="ImageResizer Bronze" src="/img/contracts/contract-hero-gold-alt.png"
-      p align="right"
-        a.btn.btn-primary href="contracts/gold"
-          | Details &raquo;
       markdown:
         **Unlimited *emergency* support incidents across your organization. Hot-fixes delivered within 2 business days.** 
 
         **Up to 20 free hours of custom development and 10 hours of preventative consulting are included.**
+      p align="right"
+        a.btn.btn-primary href="contracts/gold"
+          | Details &raquo;
 
 
       p &nbsp;
+  .span3
+    .well
+      p: a href="contracts/oem"
+        img alt="ImageResizer Silver" src="/img/contracts/contract-hero-oem.png"
+      markdown:
+
+        This contract is specially tailored to clients wishing to use an OEM or SaaS license. The two-year contract includes monthly support incidents, one designated point of contact, and two full hours of architecture planning per year, in order to ensure that ImageResizer is integrated seamlessly into your software, with maximum benefit and usability for your customers.
+
+      p align="right"
+        a.btn.btn-primary href="contracts/oem"
+          | Details &raquo;
 
 h2 Purchase Orders and Invoices
 markdown:
-  You may request an invoice for any support contract by e-mailing **sales@imageresizing.net** with your company name, contact information, and company billing address.
+  To create a quote for any support contract, simply visit [our store site](https://store.imazen.io/), fill your cart with what you would like, and choose the "Get a Quote" option on the top left side of the page. We can also generate invoices upon requests sent to **sales@imageresizing.net**.
 
