Update system requirements regarding v4

--- a/content/docs/workswith/index.slim
+++ b/content/docs/workswith/index.slim
@@ -106,11 +106,7 @@ h1 Blissfully compatible with practically everything
       ul Windows XP SP2 or higher
       ul Windows Vista
       ul Windows 7
-      ul Windows 8
-      ul Any version of linux (with Mono)*
-      ul Mac OS X 10.3 or higher (with Mono)*
-    p 
-      | *Not all plugins operate correctly within Mono, but we are constantly improving in this area.
+      ul Windows 8, 8.1
   .span3
     h2 Web servers
     ul.star_list
@@ -120,6 +116,7 @@ h1 Blissfully compatible with practically everything
       li IIS 7
       li IIS 7.5
       li IIS 8
+      li IIS 8.5
       li Visual Studio Web Server (Cassini)
       li 
         | Nginx 
@@ -130,14 +127,11 @@ h1 Blissfully compatible with practically everything
   .span3
     h2 .NET Framework Editions
     ul.star_list
-      li .NET 2.0 SP2
-      li .NET 3.0
-      li .NET 3.5
-      li .NET 4.0
+      li .NET 2.0 SP2 (ImageResizer v3)
+      li .NET 3.0 (ImageResizer v3)
+      li .NET 3.5 (ImageResizer v3)
+      li .NET 4.0 (ImageResizer v3)
       li .NET 4.5
-      li Mono 2.10.5 or higher
-    p 
-      | Many plugins require .NET 3.5 or higher to operate 
-      a href="/docs/workswith/requirements" (more details).
-
+      li .NET 4.6
+      li Mono 2.10.5 or higher (ImageResizer v3)
 
