--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -152,7 +152,7 @@ h1 Licenses
           li 
             | DRM-free 
             a href="/licenses/enterprise"
-              | Enterprise-wdie license
+              | Enterprise-wide license
             |  to all plugins
           li Automatic and manual red-eye detection
           li Facial detection and smart cropping
