Fixed a typo in a broken link

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -197,7 +197,7 @@ h1 Licenses
          * [Imazen Contributor Agreement](/licenses/contribute)
          * [Imazen Software Grant and Corporate Contributor License Agreement](/licenses/contribute-corp)
 
-        [apache]: /licenses/apaache  "Apache 2 License"
+        [apache]: /licenses/apache  "Apache 2 License"
         [agpl]: /licenses/agpl  "GNU Affero General Public License v3"
         [freedom]: /licenses/freedom  "Resizer Freedom License"
         [trial]: /licenses/trial  "Resizer Trial License"
