Fix incorrect links on homepage

--- a/content/index.slim
+++ b/content/index.slim
@@ -122,7 +122,7 @@ hr
             | Benefits
         .row-fluid
           .span6
-            a.block.plaintext href="/docs/benefits/comprehensive"
+            a.block.plaintext href="/benefits/compatible"
               .icons-box
                 i.ico-white.circle-color-full.ico-link
                 h3 Compatible and Standardized
@@ -130,7 +130,7 @@ hr
                   |ImageResizer was designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your platform, your software. See how ImageResizer can connect with your business
                 .clear
           .span6
-            a.block.plaintext href="/docs/benefits/performant"
+            a.block.plaintext href="/benefits/performant"
               .icons-box
                 i.ico-white.circle-color-full.ico-stats
                 h3 High Performance
@@ -139,7 +139,7 @@ hr
                 .clear
       .row-fluid
         .span6
-          a.block.plaintext href="/docs/benefits/stable"
+          a.block.plaintext href="/benefits/stable"
             .icons-box
               i.ico-white.circle-color-full.ico-shield
               h3 Secure and Stable
@@ -162,7 +162,7 @@ hr
       |ImageResizer is trusted by small businesses and Fortune 500 companies alike. We're proud to let our customer satisfaction and our product speak for themselves.
     .row
       .span3
-        a.block.plaintext.color href="/docs/benefits/customers"
+        a.block.plaintext.color href="/benefits/customers"
           img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/in-the-field.jpg?width=250"
           h3 In the Field
           p
@@ -174,7 +174,7 @@ hr
             p
               |Either watch a screencast or read a page to see ImageResizer in action.
       .span3
-        a.block.plaintext.color href="/docs/benefits/testimonials"
+        a.block.plaintext.color href="/benefits/testimonials"
           img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/testimonials.png?width=250"
             h3 Testimonials
             p
