Move /plugins/custom into support where it belongs

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -57,7 +57,7 @@ h1 Support
       |Support Contracts
     p
       markdown:
-        There's no better guarantee that our product will work well for your needs than getting a support contract. Check out some of the options we have available here, or **[visit the support contracts page](/support/contracts)**. 
+        There's no better guarantee that our product will work well for your needs than getting a support contract. Check out the **[full range of support contracts here](/support/contracts)**. We also [develop custom plugins for customers](/support/custom_plugins) with a support contract.
     a href="support/contracts/gold" 
       img src="/img/contracts/contract-hero-gold.png?width=100"
     p style= "font-size: 14pt"
