Fix markup errors

--- a/content/plugins/index.slim
+++ b/content/plugins/index.slim
@@ -12,28 +12,26 @@ h1 Plugin Index
   | . You are required to purchase a license before deploying them publicly.
 
 
-.row
-  .span9
-    h2
-      a href="/plugins/editions/performance" Performance Edition 
-      | (11 plugins) - $249/domain
-    == index["/plugins/editions/performance"].body(self, {:hide_inherited_plugins => true})
+h2
+  a href="/plugins/editions/performance" Performance Edition 
+  | (11 plugins) - $249/domain
+== index["/plugins/editions/performance"].body(self, {:hide_inherited_plugins => true})
 
-    h2
-      a href="/plugins/editions/creative" Creative Edition 
-      | (11 + 13 plugins) - $499/domain
-    == index["/plugins/editions/creative"].body(self, {:hide_inherited_plugins => true})
+h2
+  a href="/plugins/editions/creative" Creative Edition 
+  | (11 + 13 plugins) - $499/domain
+== index["/plugins/editions/creative"].body(self, {:hide_inherited_plugins => true})
 
-    h2
-      a href="/plugins/editions/elite" Elite Edition 
-      | (11 + 13 + 6 plugins) - $849/enterprise
-    == index["/plugins/editions/elite"].body(self, {:hide_inherited_plugins => true})
+h2
+  a href="/plugins/editions/elite" Elite Edition 
+  | (11 + 13 + 6 plugins) - $849/enterprise
+== index["/plugins/editions/elite"].body(self, {:hide_inherited_plugins => true})
 
-    h2
-      a href="/plugins/editions/free" Essential Edition 
-      | (17 plugins) - free
-    == index["/plugins/editions/free"].body(self, {:hide_inherited_plugins => true})
+h2
+  a href="/plugins/editions/free" Essential Edition 
+  | (17 plugins) - free
+== index["/plugins/editions/free"].body(self, {:hide_inherited_plugins => true})
 
 .well
   markdown: 
-    **Don't see the plugin or feature you need?** Imazen offers [custom plugin development](/plugins/custom).
+    **Don't see the plugin or feature you need?** Imazen offers [custom plugin development](/support/custom_plugins).
