Improve redistribution guide

--- a/content/docs/redist.slim
+++ b/content/docs/redist.slim
@@ -16,9 +16,14 @@ h1 Redistribution and CMS Integration guide
 
     h2 Flexible licensing
     markdown:
-      We understand many component developers wish to avoid having multiple licenses for different parts of their system. We are always willing to work with developers and vendors to eliminate licensing mismatch, and we're generally open to sublicensing parts of Essential Edition or [relicesning under any OSI-approved license](http://opensource.org/licenses), including the GPL, LGPL, AGPL, MIT, MSD, Apache, CDDL, MPL, or EPL. 
-      
-      Please email `support@imageresizing.net` for assistance in figuring out the best licensing solution. If in doubt, you can always redistribute them under the [Freedom license](/licenses/freedom), which is based on the MIT license, but adds an additional restriction.
+      We offer both [commercial OEM and SaaS licenses (all royalty-free)](/support/contracts/oem), as well as multiple OSI-compliant open-source licenses to ALL portions of ImageResizer.
+
+      Contact us by e-mail (`sales@imageresizing.net`) or phone (+1.812.809.0605) to get assistance in determining your licensing needs.
+
+      You may also want to familiarize yourself with our various licenses. Look for "Index of licenses" at the bottom of the [licenses page](/licenses), and look at the OEM, SaaS, Enterprise, and AGPLv3 licenses. If you are only interested in redistributing the Essential Edition, you only need to read the Apache 2 license.
+
+
+
   .span3
     h2 What about caching? 
 
@@ -27,7 +32,7 @@ h1 Redistribution and CMS Integration guide
 
       TinyCache offers a fixed-size (30MB), disk-persisted memory cache. The average size of a resized image is 30KB, so TinyCache can generally store the 1,000 most popular image variations. We reccommend that websites with over a few hundred images upgrade to DiskCache, which is designed to cache millions of images.
 
-      TinyCache is not yet a part of ImageResizer Essential Edition, but we're looking for partners willing to experiment with it. 
+      TinyCache is free, and included in ImageResizer Essential Edition. It can be redistributed at no charge.
 
   .span3
     h2 Play nice with others
@@ -47,39 +52,6 @@ h1 Redistribution and CMS Integration guide
 hr
 
 
-
-.title: h2 Bundling ImageResizer Performance, Creative, or Elite Edition
-.row
-
-  .span3
-    h2 Royalty-free OEM
-    markdown:
-      We offer royalty-free OEM licenses to component vendors who meet our criteria, for a very affordable yearly rate.
-
-      These [OEM licenses generally permit use of ImageResizer plugins by all paying customers of the vendor](/licenses/oem).
-
-      Please contact us for more details at `sales@imageresizing.net`.
-
-  .span3
-    h2 Distributing trials
-    markdown:
-      We allow vendors to distribute trial versions of the Performance and Creative edition plugins. This allows vendors to demonstrate the abilities of their product and the integration, and permits users to upgrade with a single license key.
-
-      Email `sales@imageresizing.net` for details.
-  .span3
-    h2 Per-sale bundling
-    markdown:
-      We offer an IPN-compatible transaction API, allowing you to resell ImageResizer editions as part of a larger product offering. Clients will receive the same license, license keys, and licensing portal as they would if they were purchasing directly from us.
-
-      E-mail `sales@imageresizing.net` for details.
-  .span3
-    h2 Bespoke Software
-    markdown:
-      The [ImageResizer Elite Edition](/plugins/editions/elite) and all [Support Contracts](/support/contracts) allow you to issue a [Professional Client](/licenses/proclient) license for a bespoke software project that you are both providing and maintaining. 
-
-      Thus, if you are only providing your system as part of customized projects that you maintain, you do not need any special licensing.
-
-      Please note, however, that the Professional Client license is only valid while the primary license holder is responsible for development and maintenance.
 
 .title: h2 CMS Integration Notes
 
