--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -223,3 +223,6 @@ h1 Licenses
         Q: What can I use for free?
         : The [Essential Edition](/plugins/editions/essential) and all sample projects. Check your diagnostics page to verify you're not using any paid/AGPL3 plugins.
 
+        Q: Do you have a redistribution/integration guide?
+        : [Yes, we do have information on redistributing and integrating ImageResizer](/docs/redist).
+
