--- a/content/plugins/index.slim
+++ b/content/plugins/index.slim
@@ -32,7 +32,7 @@ h1 Plugin Index
     h2
       a href="/plugins/editions/free" Essential Edition 
       | (17 plugins) - free
-    == index["/plugins/bundles/free"].body(self, {:hide_inherited_plugins => true})
+    == index["/plugins/editions/free"].body(self, {:hide_inherited_plugins => true})
 
 .well
   markdown: 
