--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -2,7 +2,7 @@ Flags: -comments
 Libs: -comments
 Icon: phone
 Layout: support_page
-Aliases: /support/consult
+Aliases: /support/consult /plugins/bundles/contract 
 
 
 h1 Support Contracts
