Support page meta "prepend" as well as "append"

--- a/content/_layout/page.slim
+++ b/content/_layout/page.slim
@@ -16,6 +16,11 @@ Layout: layout
             li class=(page.meta.category == c.tag ? "active" : "")
               a href=c.page
                 =c.title
+
+    - if page.meta.prepend
+      == partial page.meta.prepend.to_sym
+
+
     - if page.meta.textclass
       div class=(page.meta.textclass)
         == yield
