Add CSS for ul.inline_nav, and for .troubleshooting h4

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -516,3 +516,24 @@ padding: 6px;
 .download_section{
   padding-left:40px;
 }
+.inline_nav{
+  display:inline;
+}
+.inline_nav li{
+  display: inline;
+
+}
+.inline_nav li:after{
+  content: " |  ";
+}
+.inline_nav li:last-child:after{
+  content: '';
+}
+
+.troubleshooting h4{
+  font-weight:bold !important;
+  font-size: 16px;
+  border-bottom: 1px solid gray;
+  margin-top:2em;
+  margin-bottom:.75em;
+}
