Update from resizer - all plugins now specify their edition.

--- a/content/docs/v3/plugins/advancedfilters.slim
+++ b/content/docs/v3/plugins/advancedfilters.slim
@@ -1,10 +1,12 @@
 ---
+:append: edition_info
 :tags: plugin
 :edition: creative
 :tagline: Blur, sharpen, remove noise, and perform automatic histogram adjustment.
   Plus several other cool effects.
 :icon: cogs
 :aliases: "/plugins/advancedfilters"
+:textclass: none
 :edit_info: master/plugins/advancedfilters/readme.slim
 ---
 
