--- a/content/docs/v3/plugins/prettygifs.slim
+++ b/content/docs/v3/plugins/prettygifs.slim
@@ -1,4 +1,5 @@
 ---
+:append: edition_info
 :tags: plugin
 :edition: performance
 :tagline: Get rid of ugly .NET GIFs, and get photoshop-like results for GIFs and 8-bit
