--- a/content/docs/v3/plugins/simplefilters.slim
+++ b/content/docs/v3/plugins/simplefilters.slim
@@ -1,4 +1,5 @@
 ---
+:append: edition_info
 :tags: plugin
 :edition: creative
 :tagline: Adjust photo transparency, brightness, and apply sepia and B&amp;W filters
