--- a/content/docs/v3/plugins/whitespacetrimmer.slim
+++ b/content/docs/v3/plugins/whitespacetrimmer.slim
@@ -1,4 +1,5 @@
 ---
+:append: edition_info
 :tags: plugin
 :edition: creative
 :tagline: Automatically trims whitespace off an image using smart edge detection
