--- a/content/docs/v3/plugins/animatedgifs.slim
+++ b/content/docs/v3/plugins/animatedgifs.slim
@@ -1,4 +1,5 @@
 ---
+:append: edition_info
 :tags: plugin
 :edition: performance
 :tagline: Process and resize GIF animations like normal GIF images. Every frame is
