Fix ":hide_inherited_plugins is not a supported Slim option" warnings

--- a/content/plugins/index.slim
+++ b/content/plugins/index.slim
@@ -15,22 +15,22 @@ h1 Plugin Index
 h2
   a href="/plugins/editions/performance" Performance Edition 
   | (11 plugins) - $249/domain
-== index["/plugins/editions/performance"].body(self, {:hide_inherited_plugins => true})
+== index["/plugins/editions/performance"].body(self, {locals: {:hide_inherited_plugins => true}})
 
 h2
   a href="/plugins/editions/creative" Creative Edition 
   | (11 + 13 plugins) - $499/domain
-== index["/plugins/editions/creative"].body(self, {:hide_inherited_plugins => true})
+== index["/plugins/editions/creative"].body(self,{locals: {:hide_inherited_plugins => true}})
 
 h2
   a href="/plugins/editions/elite" Elite Edition 
   | (11 + 13 + 6 plugins) - $849/enterprise
-== index["/plugins/editions/elite"].body(self, {:hide_inherited_plugins => true})
+== index["/plugins/editions/elite"].body(self, {locals: {:hide_inherited_plugins => true}})
 
 h2
   a href="/plugins/editions/free" Essential Edition 
   | (17 plugins) - free
-== index["/plugins/editions/free"].body(self, {:hide_inherited_plugins => true})
+== index["/plugins/editions/free"].body(self, {locals: {:hide_inherited_plugins => true}})
 
 .well
   markdown: 
